[gd_scene load_steps=5 format=2]

[ext_resource path="res://parallax-space-big-planet.png" type="Texture2D" id=1]
[ext_resource path="res://Orb.gd" type="Script" id=2]
[ext_resource path="res://Trajectory.tscn" type="PackedScene" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 1
polygon = PackedVector2Array( -15.751, -41.5685, 4.90848, -45.2766, 23.4491, -38.3901, 37.2221, -25.6765, 44.1086, -3.42784, 41.4599, 16.7019, 32.4545, 32.0641, 17.0923, 42.129, -4.62671, 44.248, -22.1078, 39.4804, -35.3511, 25.7074, -43.2971, 7.69652, -42.2376, -14.0225, -30.5835, -30.9739 )

[node name="Orb" type="Node2D" groups=["massive"]]
position = Vector2( 653, -691 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
self_mass = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
z_index = -1
texture = ExtResource( 1 )

[node name="line2Dpath" type="Line2D" parent="."]
width = 40.0
default_color = Color( 1, 0, 0, 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 1 )

[node name="Trajectory" parent="." instance=ExtResource( 4 )]

[node name="Trajectory2" parent="." instance=ExtResource( 4 )]

[node name="Trajectory3" parent="." instance=ExtResource( 4 )]
